fix toolbar wrap for small devices

--- a/assets/trix/stylesheets/toolbar.scss
+++ b/assets/trix/stylesheets/toolbar.scss
@@ -13,9 +13,9 @@ trix-toolbar {
 
   .trix-button-row {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-between;
-    overflow-x: auto;
+    overflow-x: hidden;
   }
 
   .trix-button-group {
@@ -46,7 +46,7 @@ trix-toolbar {
   .trix-button {
     position: relative;
     float: left; // Collapse whitespace between elements
-    color: rgba(0,0,0, $opacity-normal);
+    color: rgba(0, 0, 0, $opacity-normal);
     font-size: $font-size-normal;
     font-weight: 600;
     white-space: nowrap;
@@ -64,7 +64,7 @@ trix-toolbar {
 
     &.trix-active {
       background: #cbeefa;
-      color: rgba(0,0,0, $opacity-active);
+      color: rgba(0, 0, 0, $opacity-active);
     }
 
     &:not(:disabled) {
@@ -72,7 +72,7 @@ trix-toolbar {
     }
 
     &:disabled {
-      color: rgba(0,0,0, $opacity-disabled);
+      color: rgba(0, 0, 0, $opacity-disabled);
     }
 
     @include phone {
@@ -121,20 +121,63 @@ trix-toolbar {
     }
   }
 
-  .trix-button--icon-attach::before { background-image: $icon-attach; top: 8%; bottom: 4%; }
-  .trix-button--icon-bold::before { background-image: $icon-bold; }
-  .trix-button--icon-italic::before { background-image: $icon-italic; }
-  .trix-button--icon-link::before { background-image: $icon-link; }
-  .trix-button--icon-strike::before { background-image: $icon-strike; }
-  .trix-button--icon-quote::before { background-image: $icon-quote; }
-  .trix-button--icon-heading-1::before { background-image: $icon-heading-1; }
-  .trix-button--icon-code::before { background-image: $icon-code; }
-  .trix-button--icon-bullet-list::before { background-image: $icon-bullets; }
-  .trix-button--icon-number-list::before { background-image: $icon-numbers; }
-  .trix-button--icon-undo::before { background-image: $icon-undo; }
-  .trix-button--icon-redo::before { background-image: $icon-redo; }
-  .trix-button--icon-decrease-nesting-level::before { background-image: $icon-nesting-level-decrease; }
-  .trix-button--icon-increase-nesting-level::before { background-image: $icon-nesting-level-increase; }
+  .trix-button--icon-attach::before {
+    background-image: $icon-attach;
+    top: 8%;
+    bottom: 4%;
+  }
+
+  .trix-button--icon-bold::before {
+    background-image: $icon-bold;
+  }
+
+  .trix-button--icon-italic::before {
+    background-image: $icon-italic;
+  }
+
+  .trix-button--icon-link::before {
+    background-image: $icon-link;
+  }
+
+  .trix-button--icon-strike::before {
+    background-image: $icon-strike;
+  }
+
+  .trix-button--icon-quote::before {
+    background-image: $icon-quote;
+  }
+
+  .trix-button--icon-heading-1::before {
+    background-image: $icon-heading-1;
+  }
+
+  .trix-button--icon-code::before {
+    background-image: $icon-code;
+  }
+
+  .trix-button--icon-bullet-list::before {
+    background-image: $icon-bullets;
+  }
+
+  .trix-button--icon-number-list::before {
+    background-image: $icon-numbers;
+  }
+
+  .trix-button--icon-undo::before {
+    background-image: $icon-undo;
+  }
+
+  .trix-button--icon-redo::before {
+    background-image: $icon-redo;
+  }
+
+  .trix-button--icon-decrease-nesting-level::before {
+    background-image: $icon-nesting-level-decrease;
+  }
+
+  .trix-button--icon-increase-nesting-level::before {
+    background-image: $icon-nesting-level-increase;
+  }
 
   .trix-dialogs {
     position: relative;
